--- a/README
+++ b/README
@@ -1,1 +1,11 @@
+INSTALLATION
+
+Install:
+  
+  Python 2.6
+  httplib2
+  
+Run:
+  ./backup2isp.py
+
 icon.svg from from Oxygen iconset, licensed under GPL - http://www.oxygen-icons.org/
